# my_test

./: .gitignore  DEPLOYMENT_CHECKLIST.md  MIGRATION_INSTRUCTIONS.md  activate.sh  create_50_math_tests.py  create_math_tests.py  db.sqlite3  gunicorn.conf.py  requirements.txt  test_api.py  test_views.py
accounts/: admin.py  models.py  urls.py  views.py  views.py.backup
accounts/migrations/: 0002_alter_user_date_joined_alter_user_email_and_more.py  0003_alter_user_date_joined.py  0004_alter_user_date_joined.py  0005_alter_user_date_joined.py
mytest/: settings.py  urls.py  wsgi.py
templates/: base.html  home.html
templates/accounts/: analytics.html  dashboard.html  profile.html  verification_requests.html
templates/tests/: base.html
templates/tests_app/: all_results.html  create_test.html  edit_test.html  monitor.html  retake_requests.html  start_test.html  take_test.html  test_control.html  test_list.html  upload_questions.html
tests_app/: models.py  urls.py  views.py
tests_app/migrations/: 0006_test_is_paused_test_paused_at.py  0007_add_question_image.py
website-backup/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
website-backup/.github/workflows/: ci.yml
website-backup/configs/: default.yaml
website-backup/scripts/: backup.sh  restore.sh
website-backup/src/backup/: __main__.py  cli.py  config.py  main.py  retention.py  storage.py  transfer.py  utils.py
website-backup/tests/: test_main.py  test_storage.py
